# garbage_swiper

./: .gitignore  2026-实训 - 1. 课程简介_检索副本.txt  AUTONOMY_8082_GUIDE.md  BEST_ENGINE_RUNTIME.md  CI.md  C_交付清单.md  DEPLOY.md  Manifest交付说明.md  PROJECT_LAYOUT.md  PWA_CONTROL_GUIDE.md  PWA_HOTSPOT_START.md  PWA_HOTSPOT_START_V2.md  README.md  requirements.txt  run_all.py  智能小车使用手册(2)_检索副本.txt  项目简介.md
android/: readme.txt  settings.gradle
artifacts/: legacy_8081_baseline_2026-07-15.json  legacy_8081_stability_incident_2026-07-15.md
autonomy/: README.md  __init__.py  adapters.py  config.py  controller.py  readme.txt  server.py
cloud/: mqtt_bridge.py  optional_sink.py  readme.txt
deliverables/: README.md
edge/: icar_yolo_infer.py  readme.txt  requirements.txt  run_best_engine.py
jetson/: _patch_probe.txt  readme.txt  run_autonomy_8082.sh  run_web_control.sh  run_web_control_alert.sh  run_web_control_buzzer.sh  run_web_control_overlay.sh  run_web_control_v2.sh  web_control_gateway.py  web_control_gateway_alert.py  web_control_gateway_buzzer.py  web_control_gateway_overlay.py  web_control_gateway_v2.py  web_control_gateway_v3.py
models/: model_manifest.json  readme.txt
ros2/: README.md  readme.txt
ros2_ws/: readme.txt
ros2_ws/src/icar_autonomy/: README.md  package.xml  readme.txt  setup.py
ros2_ws/src/icar_autonomy/config/: autonomy_params.yaml
ros2_ws/src/icar_autonomy/icar_autonomy/: __init__.py  sensor_health.py
ros2_ws/src/icar_autonomy/launch/: sensor_health.launch.py
scripts/: augment_dataset.py  auto_label.py  build_tensorrt_jetson.sh  eval_all.py  (+13 more)
(+77 files in other folders)
